--- a/sql-part5.ipynb
+++ b/sql-part5.ipynb
@@ -34,13 +34,33 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "create table JunkDB_STL_May2023.lakshmim.planned_makes(\r\n",
+                "    Id int not NULL,\r\n",
+                "    Name  varchar (50),\r\n",
+                "    location varchar(50)) "
             ],
             "metadata": {
-                "azdata_cell_guid": "d9238911-6f81-4f01-980d-b584307effaf"
+                "azdata_cell_guid": "d9238911-6f81-4f01-980d-b584307effaf",
+                "language": "sql",
+                "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.083"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 29
         },
         {
             "cell_type": "markdown",
@@ -54,13 +74,34 @@
         {
             "cell_type": "code",
             "source": [
+                "insert into  JunkDB_STL_May2023.lakshmim.planned_makes( Id,Name,location) \r\n",
+                "values\r\n",
+                "(1,'john','stl' ),\r\n",
+                "(2,'dev','dallas'),\r\n",
+                "(3,'jacob','chicago')\r\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "e7cff9cb-87ba-4c7b-98f2-eaf445e8719c"
+                "azdata_cell_guid": "e7cff9cb-87ba-4c7b-98f2-eaf445e8719c",
+                "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.077"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 30
         },
         {
             "cell_type": "markdown",
@@ -77,13 +118,87 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "update JunkDB_STL_May2023.lakshmim.planned_makes \r\n",
+                "set Name='samnn'\r\n",
+                "where Id=2;\r\n",
+                "select * from JunkDB_STL_May2023.lakshmim.planned_makes"
             ],
             "metadata": {
-                "azdata_cell_guid": "7409c695-9581-4ad8-b03a-574d2c4c87cb"
+                "azdata_cell_guid": "7409c695-9581-4ad8-b03a-574d2c4c87cb",
+                "language": "sql",
+                "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.106"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 31,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Id"
+                                    },
+                                    {
+                                        "name": "Name"
+                                    },
+                                    {
+                                        "name": "location"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Id": "1",
+                                    "Name": "john",
+                                    "location": "stl"
+                                },
+                                {
+                                    "Id": "2",
+                                    "Name": "samnn",
+                                    "location": "dallas"
+                                },
+                                {
+                                    "Id": "3",
+                                    "Name": "jacob",
+                                    "location": "chicago"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Id</th><th>Name</th><th>location</th></tr>",
+                            "<tr><td>1</td><td>john</td><td>stl</td></tr>",
+                            "<tr><td>2</td><td>samnn</td><td>dallas</td></tr>",
+                            "<tr><td>3</td><td>jacob</td><td>chicago</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 31
         },
         {
             "cell_type": "markdown",
@@ -99,13 +214,80 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "delete from JunkDB_STL_May2023.lakshmim.planned_makes \r\n",
+                "where Name='john';\r\n",
+                "select * from JunkDB_STL_May2023.lakshmim.planned_makes"
             ],
             "metadata": {
-                "azdata_cell_guid": "749c748f-19b5-4c69-9004-b6b20216616a"
+                "azdata_cell_guid": "749c748f-19b5-4c69-9004-b6b20216616a",
+                "language": "sql",
+                "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(2 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.099"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 32,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Id"
+                                    },
+                                    {
+                                        "name": "Name"
+                                    },
+                                    {
+                                        "name": "location"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Id": "2",
+                                    "Name": "samnn",
+                                    "location": "dallas"
+                                },
+                                {
+                                    "Id": "3",
+                                    "Name": "jacob",
+                                    "location": "chicago"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Id</th><th>Name</th><th>location</th></tr>",
+                            "<tr><td>2</td><td>samnn</td><td>dallas</td></tr>",
+                            "<tr><td>3</td><td>jacob</td><td>chicago</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 32
         },
         {
             "cell_type": "markdown",
@@ -122,13 +304,30 @@
         {
             "cell_type": "code",
             "source": [
+                "drop table JunkDB_STL_May2023.lakshmim.planned_makes;\r\n",
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "b3c7f6ea-ee26-46b3-9c2a-2f7a82c39699"
+                "azdata_cell_guid": "b3c7f6ea-ee26-46b3-9c2a-2f7a82c39699",
+                "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.079"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 33
         }
     ]
 }
